--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ Pillow>=10.0.0
 moviepy>=1.0.3
 tenacity>=8.2.3
 streamlit-lottie>=0.0.5
+cozepy>=0.1.0
+openai>=1.0.0
 opencv-python>=4.8.0
 opencv-contrib-python>=4.8.0
 scipy>=1.11.0
